Bug 1845104 More small style bugs
- Plan block in editor has chervons hidden under buttons.
- Removing list-group-item first-child top border only when list
  appears directly below heading and not other cases, this gets
  repeated for in editor.
- Tagged journal in full block should be flushed.
- PDF has slight gap under header just like images/media.
- PDF configure form has alert message with better spacing
- Brand icons weren't working, like social media.

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -27,17 +27,10 @@
 
 // Plan
 .card.card-secondary .list-group .task-item {
-    &:first-child {
-        border-top: 1px solid $list-group-border-color;
-    }
     a[data-toggle="collapse"] .collapse-indicator,
     a[data-toggle="collapse"].collapsed .collapse-indicator {
         margin-right: 10px;
         margin-top: 17px;
-    }
-    & .btn-group + a[data-toggle="collapse"] .collapse-indicator,
-    & .btn-group + a[data-toggle="collapse"].collapsed .collapse-indicator {
-        margin-right: 90px;
     }
     .plan-task-icon {
         vertical-align: top;
@@ -55,6 +48,12 @@
         .tags {
             margin-bottom: 0;
         }
+    }
+}
+.bt-plans-editor.card.card-secondary .list-group .task-item {
+    a[data-toggle="collapse"] .collapse-indicator,
+    a[data-toggle="collapse"].collapsed .collapse-indicator {
+        margin-right: 90px;
     }
 }
 
