--- a/htdocs/theme/raw/sass/layout/card/_card-collapse.scss
+++ b/htdocs/theme/raw/sass/layout/card/_card-collapse.scss
@@ -89,7 +89,7 @@
                 padding: 20px 0;
                 border-bottom: 1px solid $list-group-border-color;
                 &.alert {
-                    padding: 5px 10px;
+                    padding: 10px 50px;
                 }
                 &:last-child,
                 &.last {
